--- a/estilos.css
+++ b/estilos.css
@@ -75,6 +75,19 @@ header .logo{
     font-size: 2.6em;
     text-align: center;
 }
+
+header .logoB{
+    margin: 0;
+    padding: 25px 30px;
+    font-weight: bold;
+    color:rgb(58, 43, 226);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    font-size: 2.6em;
+    text-align: center;
+}
+
+
+
 header .sub{
     margin: 0;
     padding: 23px 20px;
@@ -102,6 +115,26 @@ header .container{
         rgba(0,0,0,0.5)
     )
     ,url("img/i1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+
+
+#heroB{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    height: 90vh;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url("img/c4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -165,7 +198,7 @@ header .container{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url(img/bn1.jpg);
+    ,url(img/bn1222.jpg);
     background-position: center;
     background-size: cover;
     padding: 50px;
@@ -186,6 +219,56 @@ header .container{
     margin: 20px;
     border-radius: 20px;
 }
+
+
+
+
+
+.carta1B{
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url(img/c1.jpg);
+    background-position: center;
+    background-size: cover;
+    padding: 50px;
+    margin: 20px;
+    border-radius: 20px;
+}
+
+.carta2B{
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url(img/c2.jpg);
+    background-position: center;
+    background-size: cover;
+    padding: 50px;
+    margin: 20px;
+    border-radius: 20px;
+}
+
+.carta3B{
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url(img/bn2.jpg);
+    background-position: center;
+    background-size: cover;
+    padding: 50px;
+    margin: 20px;
+    border-radius: 20px;
+}
+
+
+
+
 
 #zonas{
     display: flex;
